--- a/.devcontainer/docker-compose-langfuse.yml
+++ b/.devcontainer/docker-compose-langfuse.yml
@@ -6,20 +6,21 @@ services:
         condition: service_healthy
     ports:
       - "3000:3000"
+    # env_file:
+    #   - .env
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@langfuse-db:5432/postgres
       - DATABASE_HOST=langfuse-db
       - DATABASE_USER=postgres
       - DATABASE_NAME=postgres
-      # - DATABASE_PASSWORD=postgres
+      - DATABASE_PASSWORD=${LANGFUSE_DATABASE_PASSWORD:-postgres}
       - NEXTAUTH_SECRET=mysecret
       - SALT=mysalt
       # - ENCRYPTION_KEY=0000000000000000000000000000000000000000000000000000000000000000 # generate via `openssl rand -hex 32`
       - NEXTAUTH_URL=http://localhost:3000
       - TELEMETRY_ENABLED=${TELEMETRY_ENABLED:-true}
       - LANGFUSE_ENABLE_EXPERIMENTAL_FEATURES=${LANGFUSE_ENABLE_EXPERIMENTAL_FEATURES:-false}
-    env_file:
-      - langfuse.env
+
     networks:
       - langindex-net
 
@@ -31,9 +32,11 @@ services:
       interval: 3s
       timeout: 3s
       retries: 10
+    # env_file:
+    #   - .env
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=${LANGFUSE_DATABASE_PASSWORD:-postgres}
       - POSTGRES_DB=postgres
     ports:
       - 5432:5432
