--- a/.devcontainer/.env.local
+++ b/.devcontainer/.env.local
@@ -1,3 +1,4 @@
+# Rename .env.local to .env file and set corrsponding variables
 # Path to the folder with the documents
 DOCS_FOLDER=
 #Langfuse encryption key
