--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,6 @@ llama-index-embeddings-ollama
 torch
 torchvision
 torchaudio
-llama-index-vector-stores-qdrant
-llama-index-vector-stores-chroma
 open-clip-torch
 sentence-transformers
 pydantic
@@ -19,7 +17,10 @@ langfuse
 pytesseract
 sentencepiece
 Pillow
-llama-index-agent-introspective
 spacy
 duckdb
 ragas
+llama-index-core>=0.10.43
+openinference-instrumentation-llama-index>=2
+opentelemetry-proto>=1.12.0
+arize-phoenix-otel
