Added script to download pages from confluence and store them in parquet.

--- a/requirements-lamaindex.txt
+++ b/requirements-lamaindex.txt
@@ -22,3 +22,6 @@ sentencepiece
 Pillow
 llama-index-agent-introspective
 spacy
+llama-index-postprocessor-colbert-rerank
+llama-index-llms-azure-openai
+llama-index-readers-confluence
