--- a/.devcontainer/docker-compose-langfuse.yml
+++ b/.devcontainer/docker-compose-langfuse.yml
@@ -5,7 +5,7 @@ services:
       langfuse-db:
         condition: service_healthy
     ports:
-      - "3000:3000"
+      - "${LANGFUSE_PORT:-3000}:3000"
     # env_file:
     #   - .env
     environment:
@@ -17,7 +17,7 @@ services:
       - NEXTAUTH_SECRET=mysecret
       - SALT=mysalt
       # - ENCRYPTION_KEY=0000000000000000000000000000000000000000000000000000000000000000 # generate via `openssl rand -hex 32`
-      - NEXTAUTH_URL=http://localhost:3000
+      - NEXTAUTH_URL=${NEXTAUTH_URL:-http://localhost:3000}
       - TELEMETRY_ENABLED=${TELEMETRY_ENABLED:-true}
       - LANGFUSE_ENABLE_EXPERIMENTAL_FEATURES=${LANGFUSE_ENABLE_EXPERIMENTAL_FEATURES:-false}
 
