Split requirements-lamaindex.txt file to llamaindex and core.

--- a/requirements-lamaindex.txt
+++ b/requirements-lamaindex.txt
@@ -1,27 +1,12 @@
-llama-index
-python-dotenv
-llama-index-llms-ollama
-llama-index-embeddings-huggingface
-llama-index-graph-stores-nebula
-llama-index-readers-file
-jupyter-nebulagraph
-pymupdf4llm
-llama-index-embeddings-ollama
-torch
-torchvision
-torchaudio
-llama-index-vector-stores-qdrant
-llama-index-vector-stores-chroma
-open-clip-torch
-sentence-transformers
-pydantic
-langfuse
-arize-phoenix-otel
-pytesseract
-sentencepiece
-Pillow
 llama-index-agent-introspective
-spacy
 llama-index-postprocessor-colbert-rerank
 llama-index-llms-azure-openai
 llama-index-readers-confluence
+llama-index-multi-modal-llms-ollama
+llama-index-embeddings-clip
+llama-index-vector-stores-milvus
+llama-index-utils-workflow
+openinference-instrumentation-llama-index
+llama-index-readers-docling
+llama-index-node-parser-docling
+llama-index-core
